Tested DTOs And Almost Done Swagger
